--- a/SimpleWeather.UWP/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP/Strings/en-US/Resources.resw
@@ -288,4 +288,7 @@
   <data name="Msg_EnterAPIKey" xml:space="preserve">
     <value>Please enter an API key</value>
   </data>
+  <data name="Action_Retry" xml:space="preserve">
+    <value>Retry</value>
+  </data>
 </root>
