--- a/SimpleWeather.UWP/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP/Strings/en-US/Resources.resw
@@ -312,4 +312,7 @@
   <data name="Update_PrefixDay" xml:space="preserve">
     <value>Updated at</value>
   </data>
+  <data name="Credit_Prefix" xml:space="preserve">
+    <value>Data from</value>
+  </data>
 </root>
