SimpleWeather.UWP: use HamburgerMenu control from UWP Toolkit
* Modify style to remove burger button
* Move CommandBar to Shell
* Add interface for pages to set CommandBar label and buttons

--- a/SimpleWeather.UWP/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP/Strings/en-US/Resources.resw
@@ -333,4 +333,7 @@
   <data name="DateTime_ValidUntil" xml:space="preserve">
     <value>Valid until</value>
   </data>
+  <data name="Button_Refresh.Label" xml:space="preserve">
+    <value>Refresh</value>
+  </data>
 </root>
