SimpleWeather: add link to register for API key
* Add a link to register for an API key for the selected provider (if required)
* Default to Yahoo Weather as a provider (easier for users so they aren't confused since no key is req'd)

--- a/SimpleWeather.UWP/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP/Strings/en-US/Resources.resw
@@ -357,4 +357,7 @@
   <data name="Label_Unpin.Text" xml:space="preserve">
     <value>Unpin from Start</value>
   </data>
+  <data name="RegisterKeyBox.Content" xml:space="preserve">
+    <value>Register for API Key here</value>
+  </data>
 </root>
