--- a/SimpleWeather.UWP/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP/Strings/en-US/Resources.resw
@@ -283,10 +283,10 @@
     <value>15 minutes</value>
   </data>
   <data name="Pref_Refresh30Min.Text" xml:space="preserve">
-    <value>30 minutes (default)</value>
+    <value>30 minutes</value>
   </data>
   <data name="Pref_Refresh60Min.Text" xml:space="preserve">
-    <value>1 hour</value>
+    <value>1 hour (default)</value>
   </data>
   <data name="Pref_SummaryRefresh.Text" xml:space="preserve">
     <value>Update Frequency</value>
@@ -374,5 +374,8 @@
   </data>
   <data name="Label_Low" xml:space="preserve">
     <value>Low</value>
+  </data>
+  <data name="Pref_PersonalKey.Text" xml:space="preserve">
+    <value>Use personal provider key:</value>
   </data>
 </root>
