WeatherNow: add line graphs for hourly forecast
* Add line graph for temperature, wind speed and precipitation
* Add toggle for graph view and detail (card) view
* Only if available

--- a/SimpleWeather.UWP/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP/Strings/en-US/Resources.resw
@@ -480,4 +480,7 @@
   <data name="Label_Delete" xml:space="preserve">
     <value>Delete</value>
   </data>
+  <data name="Label_Temperature.Text" xml:space="preserve">
+    <value>Temperature</value>
+  </data>
 </root>
