--- a/SimpleWeather.UWP/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP/Strings/en-US/Resources.resw
@@ -507,4 +507,7 @@
   <data name="Message_NeedFavorite" xml:space="preserve">
     <value>Must have at least one favorite location</value>
   </data>
+  <data name="Error_WeatherUSOnly" xml:space="preserve">
+    <value>This weather provider only supports locations in the U.S.</value>
+  </data>
 </root>
