LocationsPage: group location panels
* Consolidate GridViews into one
* Group panels by location type
* Increase no. of columns for larger screens
* Move collection code to adapter
* Move GridView out of ScrollViewer (should solve random COMException when navigating to page back from LocationSearchPage)

--- a/SimpleWeather.UWP/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP/Strings/en-US/Resources.resw
@@ -510,4 +510,10 @@
   <data name="Error_WeatherUSOnly" xml:space="preserve">
     <value>This weather provider only supports locations in the U.S.</value>
   </data>
+  <data name="Header_FavLocations" xml:space="preserve">
+    <value>Favorite Locations</value>
+  </data>
+  <data name="Header_GPSLocation" xml:space="preserve">
+    <value>Current Location</value>
+  </data>
 </root>
