--- a/SimpleWeather.UWP.Shared/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en-US/Resources.resw
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
-    Microsoft ResX Schema 
-    
+  <!--
+    Microsoft ResX Schema
+
     Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
     associated with the data types.
-    
+
     Example:
-    
+
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-                
-    There are any number of "resheader" rows that contain simple 
+
+    There are any number of "resheader" rows that contain simple
     name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
     mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
     extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
     read any of the formats listed below.
-    
+
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-    
+
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
+    value   : The object must be serialized into a byte array
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -156,7 +156,7 @@
   <data name="Label_Condition.Text" xml:space="preserve">
     <value>Condition</value>
   </data>
-  <data name="Label_Details.Text" xml:space="preserve">
+  <data name="Label_Details.Header" xml:space="preserve">
     <value>Details</value>
   </data>
   <data name="Label_Done" xml:space="preserve">
@@ -177,13 +177,13 @@
   <data name="Label_FeelsLike.Text" xml:space="preserve">
     <value>Feels Like</value>
   </data>
-  <data name="Label_Forecast.Text" xml:space="preserve">
+  <data name="Label_Forecast.Header" xml:space="preserve">
     <value>Forecast</value>
   </data>
   <data name="Label_GPSFollow.Text" xml:space="preserve">
     <value>Current Location</value>
   </data>
-  <data name="Label_Hourly.Text" xml:space="preserve">
+  <data name="Label_Hourly.Header" xml:space="preserve">
     <value>Hourly</value>
   </data>
   <data name="Label_Humidity.Text" xml:space="preserve">
@@ -207,7 +207,7 @@
   <data name="Label_Sunrise.Text" xml:space="preserve">
     <value>Sunrise</value>
   </data>
-  <data name="Label_Sunriseset.Text" xml:space="preserve">
+  <data name="Label_Sunriseset.Header" xml:space="preserve">
     <value>Sunrise / Sunset</value>
   </data>
   <data name="Label_Sunset.Text" xml:space="preserve">
