SimpleWeather: add radar control
* Radar provided by EarthWindMap Project (earth.nullschool.net)

--- a/SimpleWeather.UWP.Shared/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en-US/Resources.resw
@@ -558,4 +558,7 @@
   <data name="AQI_Label" xml:space="preserve">
     <value>Air Quality Index</value>
   </data>
+  <data name="Label_Radar.Header" xml:space="preserve">
+    <value>Radar</value>
+  </data>
 </root>
