OpenWeather: migrate to One Call API endpoint
* The new endpoint consolidates current and forecast into one output
* Generate TextForecast using morn/day/eve/night forecast predictions

--- a/SimpleWeather.UWP.Shared/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en-US/Resources.resw
@@ -561,4 +561,16 @@
   <data name="Label_Radar.Header" xml:space="preserve">
     <value>Radar</value>
   </data>
+  <data name="Label_Day" xml:space="preserve">
+    <value>Afternoon</value>
+  </data>
+  <data name="Label_Eve" xml:space="preserve">
+    <value>Evening</value>
+  </data>
+  <data name="Label_Morning" xml:space="preserve">
+    <value>Morning</value>
+  </data>
+  <data name="Label_Night" xml:space="preserve">
+    <value>Night</value>
+  </data>
 </root>
