DetailExtras: add wind gust data (if available)

--- a/SimpleWeather.UWP.Shared/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en-US/Resources.resw
@@ -639,4 +639,7 @@
   <data name="Pref_Features_Title.Text" xml:space="preserve">
     <value>Features</value>
   </data>
+  <data name="WindGust_Label" xml:space="preserve">
+    <value>Wind Gust</value>
+  </data>
 </root>
