SimpleWeather: add initial minimum capacity for lists
* Add initial capacity for ArrayLists to avoid multiple size reallocation

--- a/SimpleWeather.UWP.Shared/Strings/en-US/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/en-US/Resources.resw
@@ -642,4 +642,7 @@
   <data name="WindGust_Label" xml:space="preserve">
     <value>Wind Gust</value>
   </data>
+  <data name="Label_Series" xml:space="preserve">
+    <value>Series</value>
+  </data>
 </root>
